How section rework first pass

--- a/resources/sass/components/_form.scss
+++ b/resources/sass/components/_form.scss
@@ -50,7 +50,7 @@ select::-ms-expand {
 }
 
 // Homepage banner form
-.box {
+.banner-form-wrapper {
     select,
     input {
         //padding-left: 16px;
