--- a/resources/sass/pages/_faqsPage.scss
+++ b/resources/sass/pages/_faqsPage.scss
@@ -1,6 +1,6 @@
 .faqs-page {
     .hl { // The highlighted span for search terms in results
-        @extend .bg-teal;
+        @extend .bg-turq;
         @extend .text-white;
     }
 
