--- a/resources/sass/components/_banner.scss
+++ b/resources/sass/components/_banner.scss
@@ -26,13 +26,15 @@
 
 //BANNER CONTENTS
 
-.box {
+.banner-form-wrapper {
     border-radius: 5px;
-    background-color: rgba(255, 255, 255, 0.75);
+    background-color: #fff;
+    //background-color: rgba(255, 255, 255, 0.75);
     padding: 20px 30px;
     text-align: center;
     position: relative;
     z-index: 5;
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16);
 
     &.flat-box {
         padding: 30px 40px 30px;
@@ -78,10 +80,10 @@
     }
 }
 
-.home-promo {
-    color: $white;
+.banner-text {
+    //color: $white;
     @include media-breakpoint-up(lg) {
-        padding-top: 70px;
+        //padding-top: 70px;
     }
     position: relative;
     z-index: 5;
@@ -90,23 +92,23 @@
         font-size: 24px;
         //line-height: 32px;
     }
-}
 
-.promo-list {
-    li {
-        list-style: none;
-        font-size: 24px;
-        //line-height: 28px;
-        position: relative;
-        padding-left: 63px;
-        margin-bottom: 20px;
+    .banner-list {
+        li {
+            list-style: none;
+            font-size: 24px;
+            //line-height: 28px;
+            position: relative;
+            padding-left: 63px;
+            margin-bottom: 20px;
 
-        &:before {
-            content: url("/images/tick.svg");
-            width: 30px;
-            height: 28px;
-            @include v-c;
-            left: 0;
+            &:before {
+                content: url("/images/tick.svg");
+                width: 30px;
+                height: 28px;
+                @include v-c;
+                left: 0;
+            }
         }
     }
 }
