--- a/resources/sass/layout/_footer.scss
+++ b/resources/sass/layout/_footer.scss
@@ -128,16 +128,7 @@
 
 
 //Back to top styles
-.backTopHolder {
-    margin: auto;
-
-    .backTopContent {
-        //width: 150px;
-    }
-
-    .backToTop {
-        color: $white;
-        padding: 27px;
-        display: block;
-    }
+.back-top-wrapper {
+    bottom: 100%;
+    width: 100%;
 }
