--- a/resources/sass/layout/_blog.scss
+++ b/resources/sass/layout/_blog.scss
@@ -17,6 +17,8 @@
         .blog-wrap {
             text-decoration: none !important;
             margin-bottom: 40px;
+            border-radius: 2px;
+            border: 1px solid $newGrey;
 
             a {
                 text-decoration: none !important;
