--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -37,6 +37,7 @@
 @import 'pages/resultsPage';
 @import 'pages/content';
 @import 'pages/faqsPage';
+@import 'pages/yourRights';
 @import 'pages/404';
 
 // PAGE SECTION
