--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -38,6 +38,7 @@
 @import 'pages/content';
 @import 'pages/faqsPage';
 @import 'pages/yourRights';
+@import 'pages/aboutUs';
 @import 'pages/404';
 
 // PAGE SECTION
