Your rights page first section.

--- a/resources/sass/pages/_aboutUs.scss
+++ b/resources/sass/pages/_aboutUs.scss
@@ -7,7 +7,7 @@
 }
 
 .about-us-page {
-    .social {
+    .social-links {
         text-align: center;
         display: flex;
         justify-content: center;
