Your rights page social section.

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -200,3 +200,6 @@ $pagination-link-height: 35px;
 //$table-cell-padding: 0.5rem;
 //$table-cell-padding-small: 0.5rem;
 //$table-border-width: 0;
+
+// Box shadows
+$box-shadow: 0 0 5px rgba(0, 0, 0, 0.25);
