--- a/resources/sass/pages/_aboutUs.scss
+++ b/resources/sass/pages/_aboutUs.scss
@@ -6,7 +6,7 @@
     border-bottom: $greyBorder;
 }
 
-.about-us-page {
+.social-contacts {
     .social-links {
         text-align: center;
         display: flex;
