--- a/resources/sass/_global.scss
+++ b/resources/sass/_global.scss
@@ -426,3 +426,25 @@ path {
 .d-table-cell {
     @extend .p-2;
 }
+
+.green-tick {
+    position: relative;
+    padding: 0 0 0 30px;
+    text-align: left;
+
+    &:before {
+        content: 'Tick';
+        position: absolute;
+        left: 0;
+        width: 11px;
+        height: 11px;
+        border-radius: 50%;
+    }
+}
+
+// Signature font
+.signature {
+    font-family: "Brown Pen", cursive;
+    @include font-size(28);
+    font-weight: bold;
+}
