--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -203,3 +203,6 @@ $pagination-link-height: 35px;
 
 // Box shadows
 $box-shadow: 0 0 5px rgba(0, 0, 0, 0.25);
+
+// Tick lists
+$green-tick-size: 20px;
