FAQs rework first pass

--- a/resources/sass/_global.scss
+++ b/resources/sass/_global.scss
@@ -5,7 +5,7 @@ body, * {
 .cookie-page,
 .privacy-page,
 .terms-and-conditions-page,
-.faqs-page,
+//.faqs-page,
 //.your-rights-page,
 //.about-us-page,
 .blog-page {
