--- a/resources/sass/components/_accordion.scss
+++ b/resources/sass/components/_accordion.scss
@@ -1,11 +1,19 @@
 .accordion {
+    .card {
+        border-radius: $border-radius !important;
+    }
+
     .card-header {
         padding: 0;
         position: relative;
+        background-color: #fff;
+        @extend .border-0;
+        border-radius: $border-radius !important;
 
         .btn {
             width: 100%;
             text-align: left;
+            @extend .p-4;
             padding-right: 90px;
             @include font-size(24);
 
