--- a/resources/sass/components/_accordion.scss
+++ b/resources/sass/components/_accordion.scss
@@ -1,6 +1,13 @@
 .accordion {
+    width: 100%;
+
     .card {
         border-radius: $border-radius !important;
+        @extend .w-100;
+        @extend .shadow;
+        @extend .border-0;
+        @extend .mb-2;
+        @extend .bg-white;
     }
 
     .card-header {
