First pass cookie policy

--- a/resources/sass/_global.scss
+++ b/resources/sass/_global.scss
@@ -3,8 +3,8 @@ body, * {
 }
 
 .cookie-page,
-.privacy-page,
-.terms-and-conditions-page,
+//.privacy-page,
+//.terms-and-conditions-page,
 //.faqs-page,
 //.your-rights-page,
 //.about-us-page,
