- Blogs: Elements of the Blog Item ( WIP )

--- a/resources/sass/layout/_blog.scss
+++ b/resources/sass/layout/_blog.scss
@@ -151,9 +151,9 @@
 
         .btn-blog-back {
             position: absolute;
-            bottom: 20px;
+            top: 20px;
             //left: 0px;
-            width: 170px;
+            width: 200px;
             height: 45px;
             line-height: 45px;
             border-radius: 0 10px 10px 0;
