--- a/resources/sass/components/_banner.scss
+++ b/resources/sass/components/_banner.scss
@@ -38,7 +38,23 @@
     text-align: center;
     position: relative;
     z-index: 5;
-    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16);
+    @extend .shadow;
+
+    .postcode-parent {
+        .input-wrapper {
+            &:before {
+                content: '';
+                background-image: url('/images/icons/icon-location.svg');
+                @include icon-bg-center(100%, 15px, 25px);
+                @include v-c;
+                left: 20px;
+            }
+
+            input {
+                padding-left: 60px;
+            }
+        }
+    }
 
     &.flat-box {
         padding: 30px 40px 30px;
