--- a/resources/sass/components/basic/_select.scss
+++ b/resources/sass/components/basic/_select.scss
@@ -34,13 +34,21 @@
     &.big {
         // Button added by BS select
         .dropdown-toggle {
-            padding: 16px 70px 16px 16px;
+            padding: 16px 60px;
             width: 100%;
             border-radius: 10px;
             color: $darkerGrey;
             @include font-size(18);
             @extend .SofiaPro-Medium;
             border: 2px solid $darkestWhite;
+
+            &:before {
+                content: '';
+                background-image: url('/images/icons/icon-choose-treatment.svg');
+                @include icon-bg-center(100%, 20px, 20px);
+                @include v-c;
+                left: 20px;
+            }
         }
     }
 
