--- a/resources/sass/components/_banner.scss
+++ b/resources/sass/components/_banner.scss
@@ -10,18 +10,9 @@
     background-size: cover;
     background-position: center center;
     position: relative;
-    padding: 45px 0;
+    padding: 75px 0;
 
-    &:after {
-        content: '';
-        position: absolute;
-        top: 0;
-        left: 0;
-        bottom: 0;
-        right: 0;
-        background-color: #fff;
-        opacity: 0.9;
-    }
+    @include mask($bannerMaskGreen, 0.06);
 
     > * {
         position: relative;
@@ -35,7 +26,7 @@
     border-radius: 5px;
     background-color: #fff;
     //background-color: rgba(255, 255, 255, 0.75);
-    padding: 20px 30px;
+    padding: 40px 30px;
     text-align: center;
     position: relative;
     z-index: 5;
@@ -72,13 +63,12 @@
 
     .form-child {
         position: relative;
-        margin-top: 20px;
+        @extend .mt-2;
     }
 
     p {
         @include font-size(25);
-        margin: auto;
-        font-weight: 500;
+        margin: 0 auto 25px;
     }
 
     .postcode-item {
@@ -88,7 +78,7 @@
         padding: 9px;
 
         &:hover {
-            background-color: $newGrey;
+            background-color: $fontGrey;
             color: $white;
             cursor: pointer;
             width: 100%;
@@ -110,26 +100,26 @@
     z-index: 5;
 
     p {
-        font-size: 24px;
-        //line-height: 32px;
+        line-height: 1.6;
+    }
+
+    p,
+    li {
+        @include font-size(1.2rem);
     }
 
     .banner-list {
         li {
             list-style: none;
-            font-size: 24px;
-            //line-height: 28px;
             position: relative;
-            padding-left: 63px;
+            padding-left: 50px;
             margin-bottom: 20px;
+            line-height: 24px;
 
-            //&:before {
-            //    content: url("/images/tick.svg");
-            //    width: 30px;
-            //    height: 28px;
-            //    @include v-c;
-            //    left: 0;
-            //}
+            &:before {
+                width: 26px;
+                height: 26px;
+            }
         }
     }
 }
