--- a/resources/sass/pages/_content.scss
+++ b/resources/sass/pages/_content.scss
@@ -141,7 +141,7 @@ h6 {
 h1 {
     @include font-size(40);
     //@include font-style('SofiaPro-Black', 40px, false, false, 45px, -2.25px);
-    margin: 0 0 40px 0;
+    margin: 0 0 25px 0;
 }
 
 h2 {
@@ -151,9 +151,9 @@ h2 {
 }
 
 .section-title {
-    @include font-size(40);
-    //@include font-style('SofiaPro-Bold', 40px, false, false, 48px, -2px);
-    margin-bottom: 40px;
+    @include font-size(1.8rem);
+    margin-bottom: 25px;
+    font-weight: 500;
 }
 
 .page-subtitle {
@@ -181,6 +181,12 @@ h5 {
 h6 {
     font-size: 22px;
     margin: 0 0 22px 0;
+}
+
+.p-intro {
+    @include font-size(1.2rem);
+    line-height: 1.6;
+    @extend .SofiaPro-Medium;
 }
 
 .image-wrapper {
