--- a/resources/sass/pages/_content.scss
+++ b/resources/sass/pages/_content.scss
@@ -1,112 +1,109 @@
-.hc-content {
-
-    section {
-        padding: 40px 0;
-    }
-
-    p {
-        @include font-size(20);
-
-        //&:last-child {
-        //    @extend .mb-0;
-        //}
-    }
-
-    table {
-        ol, ul {
-            margin: 0;
-
-            li {
-                font-size: inherit
-            }
-        }
-    }
-
-    em {
-        color: $turq;
-    }
-
-    ol, ul {
-        list-style-type: none;
-    }
-
-    ul.blue-dot {
-        //padding: 0 0 0 50px;
-        margin: 30px 0 50px 0;
-
-        > li {
-            @include font-size(22);
-            margin: 0 0 22px 40px;
-            position: relative;
-            padding: 0 0 0 40px;
-
-            &:last-child {
-                margin-bottom: 0;
-            }
-
-            &:before {
-                content: '';
-                position: absolute;
-                top: 5px;
-                left: 0;
-                width: 11px;
-                height: 11px;
-                background-color: $turq;
-                border-radius: 50%;
-            }
-        }
-    }
-
-    ol {
-        //padding: 0 0 0 50px;
-        margin: 30px 0 50px 0;
-        counter-reset: counter;
-
-        li {
-            font-size: 22px;
-            margin: 0 0 22px 0;
-            position: relative;
-            padding: 0 0 0 40px;
-            counter-increment: counter;
-            line-height: 1;
-
-            &:before {
-                content: counter(counter) '.';
-                position: absolute;
-                top: 0;
-                left: 0;
-                color: $turq;
-                @extend .font-semibold;
-            }
-        }
-    }
-
-
-
-    blockquote {
-        padding: 40px 0;
-
-        p {
-            max-width: 80%;
-            margin: 0 auto 20px auto;
-            text-align: center;
-            font-size: 22px;
-            color: $turq;
-        }
-    }
-
-    hr {
-        width: 100%;
-        height: 4px;
-        border: 0;
-    }
-
-    .btn-link {
-        color: $darkerGrey;
-    }
-
-
-}
+//.hc-content {
+//    section {
+//        padding: 40px 0;
+//    }
+//
+//    p {
+//        @include font-size(20);
+//
+//        //&:last-child {
+//        //    @extend .mb-0;
+//        //}
+//    }
+//
+//    table {
+//        ol, ul {
+//            margin: 0;
+//
+//            li {
+//                font-size: inherit
+//            }
+//        }
+//    }
+//
+//    em {
+//        color: $turq;
+//    }
+//
+//    ol, ul {
+//        list-style-type: none;
+//    }
+//
+//    ul.blue-dot {
+//        //padding: 0 0 0 50px;
+//        margin: 30px 0 50px 0;
+//
+//        > li {
+//            @include font-size(22);
+//            margin: 0 0 22px 40px;
+//            position: relative;
+//            padding: 0 0 0 40px;
+//
+//            &:last-child {
+//                margin-bottom: 0;
+//            }
+//
+//            &:before {
+//                content: '';
+//                position: absolute;
+//                top: 5px;
+//                left: 0;
+//                width: 11px;
+//                height: 11px;
+//                background-color: $turq;
+//                border-radius: 50%;
+//            }
+//        }
+//    }
+//
+//    ol {
+//        //padding: 0 0 0 50px;
+//        margin: 30px 0 50px 0;
+//        counter-reset: counter;
+//
+//        li {
+//            font-size: 22px;
+//            margin: 0 0 22px 0;
+//            position: relative;
+//            padding: 0 0 0 40px;
+//            counter-increment: counter;
+//            line-height: 1;
+//
+//            &:before {
+//                content: counter(counter) '.';
+//                position: absolute;
+//                top: 0;
+//                left: 0;
+//                color: $turq;
+//                @extend .font-semibold;
+//            }
+//        }
+//    }
+//
+//    blockquote {
+//        padding: 40px 0;
+//
+//        p {
+//            max-width: 80%;
+//            margin: 0 auto 20px auto;
+//            text-align: center;
+//            font-size: 22px;
+//            color: $turq;
+//        }
+//    }
+//
+//    hr {
+//        width: 100%;
+//        height: 4px;
+//        border: 0;
+//    }
+//
+//    .btn-link {
+//        color: $darkerGrey;
+//    }
+//
+//
+//}
 
 ol.alpha {
     counter-reset: counter;
