--- a/resources/sass/_mixins.scss
+++ b/resources/sass/_mixins.scss
@@ -243,7 +243,7 @@
     position: $position;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate3d(-50%, -50%, 0);
 }
 
 // Fixed aspect ratio
