--- a/resources/sass/layout/_blog.scss
+++ b/resources/sass/layout/_blog.scss
@@ -50,7 +50,7 @@
 
                 img {
                     width: 100%;
-                    transition: $transition;
+                    transition: 2s all ease-out;
                 }
 
                 .blog-item-category {
@@ -89,7 +89,11 @@
                 }
             }
 
-
+            &:hover {
+                img {
+                    transform: scale3d(1.1, 1.1, 1.1) translate3d(-50%, -50%, 0) !important;
+                }
+            }
         }
     }
 }
