--- a/resources/sass/components/basic/_helpLink.scss
+++ b/resources/sass/components/basic/_helpLink.scss
@@ -14,7 +14,7 @@
     @include flex-center;
 
     &__inline {
-        position: initial;
+        position: static;
         display: inline-flex;
 
         &-red {
