--- a/resources/sass/components/_banner.scss
+++ b/resources/sass/components/_banner.scss
@@ -19,8 +19,10 @@
         z-index: 5;
     }
 
-    .row {
-        @include reset-row-spacing(60px);
+    .container:not(.container-1028){
+        .row {
+            @include reset-row-spacing(60px);
+        }
     }
 }
 
@@ -57,12 +59,15 @@
 
         .dropdown-toggle,
         #input_postcode {
-            max-width: 290px;
+            min-width: 230px;
+            max-width: 230px;
         }
 
         .form-child {
             margin-top: 30px;
         }
+
+
     }
 
     .form-child {
