--- a/resources/sass/pages/pagesections/_howSection.scss
+++ b/resources/sass/pages/pagesections/_howSection.scss
@@ -52,15 +52,6 @@
 
 //============================ HOW PAGE =============================
 .how-section__extra {
-
-    form {
-        //padding-right: 90px;
-    }
-
-    .bootstrap-select {
-        //max-width: 220px;
-    }
-
     .select-parent {
         label {
             width: 100%;
@@ -83,9 +74,9 @@
 }
 
 #how_to_use_filter_policies .select-parent {
-    background-color: #fff !important;
-    padding: 1rem !important;
-    border: .05rem solid #d7d7d7 !important;
-    border-radius: 5px !important;
+    background-color: #fff;
+    padding: 1rem;
+    border: $greyBorder;
+    border-radius: $border-radius;
     width: 100% !important;
 }
