--- a/resources/sass/pages/pagesections/_howSection.scss
+++ b/resources/sass/pages/pagesections/_howSection.scss
@@ -19,7 +19,11 @@
 }
 
 .how-section {
-
+    .row {
+        @include media-breakpoint-up(md){
+            @include reset-row-spacing(8px);
+        }
+    }
 }
 
 .how-section__child {
