--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -212,3 +212,25 @@ $box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.1);
 
 // Tick lists
 $green-tick-size: 12px;
+
+// Cards
+
+$card-spacer-y:                     2rem;
+$card-spacer-x:                     1.25rem !default;
+//$card-border-width:                 $border-width !default;
+//$card-border-radius:                $border-radius !default;
+//$card-border-color:                 rgba($black, .125) !default;
+//$card-inner-border-radius:          calc(#{$card-border-radius} - #{$card-border-width}) !default;
+//$card-cap-bg:                       rgba($black, .03) !default;
+//$card-cap-color:                    null !default;
+//$card-color:                        null !default;
+//$card-bg:                           $white !default;
+//
+//$card-img-overlay-padding:          1.25rem !default;
+//
+//$card-group-margin:                 $grid-gutter-width / 2 !default;
+//$card-deck-margin:                  $card-group-margin !default;
+//
+//$card-columns-count:                3 !default;
+//$card-columns-gap:                  1.25rem !default;
+//$card-columns-margin:               $card-spacer-y !default;
