--- a/resources/sass/layout/_blog.scss
+++ b/resources/sass/layout/_blog.scss
@@ -15,6 +15,23 @@
     }
 }
 
+.blog-item-details {
+    display: flex;
+    align-items: center;
+
+    img {
+        width: 100%;
+        height: 100%;
+        vertical-align: top;
+    }
+
+    div {
+        width: 12px;
+        height: 12px;
+        display: inline-block;
+    }
+}
+
 .blog-list {
     .section-title {
         font-size: 40px;
@@ -25,12 +42,6 @@
     .blog-content {
         @include reset-row-spacing(10px);
 
-        .blog-item-details {
-            svg {
-                width: 12px;
-                height: 12px;
-            }
-        }
 
         .blog-wrap {
             text-decoration: none !important;
@@ -45,7 +56,6 @@
             .image-wrapper {
                 position: relative;
                 overflow: hidden;
-
                 @include aspect-ratio(924, 460);
 
                 img {
@@ -104,7 +114,8 @@
     }
 
     .jumbotron {
-        height: 350px;
+        @include aspect-ratio(1206, 728);
+        @extend .mb-5;
         background-position: left;
         background-repeat: no-repeat;
         background-size: cover;
@@ -162,6 +173,20 @@
                 }
             }
         }
+    }
+
+    .author {
+        .image-wrapper {
+            border-radius: 50%;
+            width: 100px;
+            //height: 100px;
+            overflow: hidden;
+            @include aspect-ratio(100, 100);
+        }
+    }
+
+    .latest-blog-image {
+        @include aspect-ratio(924, 460);
     }
 }
 
